# QuasarX

./: README.md
service/: CMakeLists.txt  QuantService.service  config.template.json  startup.sh
service/doc/: README.md
service/include/: AgentSubSystem.h  BrokerSubSystem.h  DataContext.h  DataGroup.h  DataHandler.h  DataSource.h  ExchangeManager.h  Feature.h  FeatureSubsystem.h  HttpHandler.h  KBarBuilder.h  MarketTiming.h  PortfolioSubsystem.h  RiskContext.h  RiskPlugin.h  RiskSubSystem.h  Strategy.h  StrategyNode.h  StrategySubSystem.h  TraderSubsystem.h  Transfer.h  config.h  server.h  std_header.h
service/include/Agents/: DeepAgent.h  IAgent.h  XGBoostAgent.h
service/include/Algorithms/: ARModel.h  CEEMDAN.h  EMD.h  EMD_SIMD.h  FFT.h  Random.h  VMD.h
service/include/Bridge/: CapitalPool.h  ETFOptionSymbol.h  OrderLimit.h  PositionEvent.h  SlippageModel.h  exchange.h
service/include/Contract/: Contract.h  Stock.h
service/include/Features/: ATR.h  Basic.h  CD.h  MA.h  RSI.h  Scaler.h  VWAP.h
service/include/Function/: Callable.h  Function.h  GARCH.h  GaussianHMM.h  Normalization.h
service/include/Handler/: AccountHandler.h  AssetHandler.h  BackTestHandler.h  BrokerHandler.h  CUSUMHandler.h  CapacityHandler.h  CapitalRiskHandler.h  DataHandler.h  DividendHandler.h  ExchangeHandler.h  FeatureHandler.h  FinanceDataHandler.h  FinanceHandler.h  FutureHandler.h  IndexHandler.h  MacroHandler.h  NavHandler.h  NodeIOHandler.h  OptionHandler.h  OrderHandler.h  PCAHandler.h  PortfolioHandler.h  PositionHandler.h  PredictionHandler.h  PythonHandler.h  PythonRunnerHandler.h  QuoteDataHandler.h  QuoteDownloadHandler.h  RecordHandler.h  ReplayHandler.h  RiskHandler.h  RiskStatusHandler.h  SectorHandler.h  SectorQuoteHandler.h  ServerEventHandler.h  ShiborHandler.h  SignalHandler.h  StockHandler.h  StrategyHandler.h  StrategyLogHandler.h  (+5 more)
service/include/Interprecter/: Stmt.h
service/include/MarketTiming/: ImmediateTiming.h  ShadowTiming.h
service/include/Message/: EMailMessage.h
service/include/Metric/: CUSUMDetector.h  Capacity.h  Covariance.h  Drawdown.h  MonteCarloSimulator.h  Return.h  RiskMetric.h  Sharp.h  Volatility.h
service/include/Nodes/: BreakoutNode.h  CUSUMNode.h  DebugNode.h  DecisionNode.h  EMDNode.h  ExecuteNode.h  ExecutionPlan.h  FactorCombineNode.h  FormulaNode.h  FunctionNode.h  HMMNode.h  LogisticNode.h  NeuralNetworkNode.h  PortfolioNode.h  ProtectionNode.h  QuoteFillStrategy.h  QuoteNode.h  ResampleNode.h  ScriptNode.h  SignalNode.h  SpreadNode.h  StackNode.h  TestNode.h  XGBoostNode.h
service/include/Risk/: CapitalRiskManager.h  RiskMetric.h  StopLoss.h
service/include/Strategy/: Daily.h
service/include/Util/: DailyDecision.h  DuckDBLogger.h  FinanceDB.h  PythonRunner.h  QuoteDB.h  Strategy.h  TickMap.h  Volatility.h  data.h  datetime.h  finance.h  log.h  string_algorithm.h  system.h
service/scripts/: trend.json
service/src/: AgentSubSystem.cpp  BrokerSubSystem.cpp  DataContext.cpp  DataGroup.cpp  DataHandler.cpp  ExchangeManager.cpp  FeatureSubsystem.cpp  HttpHandler.cpp  KBarBuilder.cpp  PortfolioSubsystem.cpp  RiskSubSystem.cpp  Strategy.cpp  StrategyNode.cpp  StrategySubSystem.cpp  TraderSubsystem.cpp  Transfer.cpp  config.cpp  main.cpp  server.cpp
service/src/Agents/: DeepAgent.cpp  LSTMAgent.cpp  RandomForestAgent.cpp  XGBoostAgent.cpp
service/src/Algorithms/: ARModel.cpp  CEEMDAN.cpp  EMD.cpp  EMD_SIMD.cpp  Random.cpp  VMD.cpp
service/src/Bridge/: CapitalPool.cpp  ETFOptionSymbol.cpp  OrderLimit.cpp  SlippageModel.cpp
service/src/Contract/: Stock.cpp
service/src/DataLayer/: web.json
service/src/Features/: ATR.cpp  Basic.cpp  MA.cpp  RSI.cpp  Scaler.cpp  VWAP.cpp
service/src/Function/: Function.cpp  GARCH.cpp  GaussianHMM.cpp  Normalization.cpp
service/src/Handler/: AccountHandler.cpp  AssetHandler.cpp  BackTestHandler.cpp  BrokerHandler.cpp  CUSUMHandler.cpp  CapacityHandler.cpp  CapitalRiskHandler.cpp  DataHandler.cpp  DividendHandler.cpp  ExchangeHandler.cpp  FeatureHandler.cpp  FinanceDataHandler.cpp  FinanceHandler.cpp  FutureHandler.cpp  IndexHandler.cpp  MacroHandler.cpp  NavHandler.cpp  NodeIOHandler.cpp  OptionHandler.cpp  OrderHandler.cpp  PCAHandler.cpp  PortfolioHandler.cpp  PositionHandler.cpp  PredictionHandler.cpp  PythonHandler.cpp  PythonRunnerHandler.cpp  QuoteDataHandler.cpp  QuoteDownloadHandler.cpp  RecordHandler.cpp  ReplayHandler.cpp  RiskHandler.cpp  RiskStatusHandler.cpp  SectorHandler.cpp  SectorQuoteHandler.cpp  ServerEventHandler.cpp  ShiborHandler.cpp  SignalHandler.cpp  StockHandler.cpp  StrategyHandler.cpp  StrategyLogHandler.cpp  (+5 more)
service/src/Interprecter/: CrossSectionGraph.cpp  FormulaParser.cpp  FormulaParserEval.cpp  FormulaParserValidate.cpp  Stmt.cpp  StmtGrammar.cpp
service/src/MarketTiming/: ImmediateTiming.cpp  ShadowTiming.cpp
service/src/Message/: EMailMessage.cpp
service/src/Metric/: CUSUMDetector.cpp  Capacity.cpp  Covariance.cpp  Drawdown.cpp  MonteCarloSimulator.cpp  Return.cpp  RiskMetric.cpp  Sharp.cpp  Volatility.cpp
service/src/Nodes/: BreakoutNode.cpp  CUSUMNode.cpp  DebugNode.cpp  DecisionNode.cpp  EMDNode.cpp  ExecuteNode.cpp  FactorCombineNode.cpp  FormulaNode.cpp  FunctionNode.cpp  HMMNode.cpp  LogisticNode.cpp  NeuralNetworkNode.cpp  PortfolioNode.cpp  ProtectionNode.cpp  QuoteFillStrategy.cpp  QuoteNode.cpp  ResampleNode.cpp  ScriptNode.cpp  SignalNode.cpp  SpreadNode.cpp  StackNode.cpp  TestNode.cpp  XGBoostNode.cpp
service/src/Risk/: CapitalRiskManager.cpp  RiskMetric.cpp  StopLoss.cpp
service/src/Strategy/: Daily.cpp
service/src/Util/: DailyDecision.cpp  DuckDBLogger.cpp  FinanceDB.cpp  PythonRunner.cpp  QuoteDB.cpp  Strategy.cpp  Volatility.cpp  data.cpp  datetime.cpp  finance.cpp  mdb.c  midl.c  (+2 more)
service/test/: TEST_CLASSIFICATION.md  conftest.py  main.py  run_tests.py  test_modes.json
service/tools/: download_etf_bs.py  download_quote.py  fetch_dividend_data.py  fetch_finance_data.py  fetch_hs300_option.py  fetch_macro_data.py  fetch_shibor.py  mail.py  quote_index.py  run_task.py  sector.py  tvm_convert.py  xgboost_train.py
(+526 files in other folders)
